# it-depends

./: .dockerignore  .gitignore  CLAUDE.md  CODEOWNERS  Dockerfile  Gemfile  Makefile  README.md  SIMILAR.md  dependabot.rb  docker-compose.yml  notes.md  pyproject.toml  setup.py  style.grass
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: integration.yml  lint.yml  pip-audit.yml  pythonpublish.yml  tests.yml  uv-audit.yml  zizmor.yml
doc/: SIMILAR.md
hooks/: README.md  pre-commit  pre-push
it_depends/: __init__.py  __main__.py  apt.py  audit.py  autotools.py  cache.py  cargo.py  cli.py  cmake.py  db.py  dependencies.py  docker.py  go.py  graph.py  graphs.py  html.py  it_depends.py  native.py  npm.py  pip.py  resolution.py  resolver.py  sbom.py  ubuntu.py  utils.py  vcs.py
it_depends/ubuntu/: apt.py  docker.py  resolver.py
src/it_depends/: __init__.py  __main__.py  _cli.py  _exec.py  audit.py  autotools.py  cache.py  cargo.py  cmake.py  config.py  db.py  dependencies.py  docker.py  go.py  graph.py  graphs.py  html.py  it_depends.py  logger.py  maintenance.py  models.py  native.py  npm.py  pip.py  repository.py  resolution.py  resolver.py  sbom.py  vcs.py
src/it_depends/ubuntu/: __init__.py  apt.py  docker.py  resolver.py
test/: conftest.py  rebuild_expected_output.py  test_apt.py  test_audit.py  test_cache.py  test_cargo.py  test_db.py  test_exec.py  test_go.py  test_graphs.py  test_maintenance.py  test_native.py  test_no_dependencies.py  test_npm.py  test_resolver.py  test_smoke.py  test_ubuntu.py  test_vcs.py
test/repos/: .gitignore  bitcoin.expected.json  crypto-js.expected.json  cvedb.expected.json  pe-parse.expected.json  siderophile.expected.json
