[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "it-depends"
version = "0.1.3"
description = "A software dependency analyzer"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "Trail of Bits"}
]
requires-python = ">=3.7"
dependencies = [
    "appdirs>=1.4.4",
    "cyclonedx-python-lib >= 5,< 9",
    "docker>=4.4.0",
    "graphviz>=0.14.1",
    "johnnydep>=1.8",
    "networkx>=2.4",
    "parse_cmake>=0.4.1",
    "semantic_version~=2.8.5",
    "sqlalchemy>=1.3",
    "tqdm>=4.48.0",
    "requests>=2.20.0",
    "urllib3>=1.26.5",
]

[project.optional-dependencies]
dev = ["flake8", "pytest", "twine", "mypy>=0.812", "types-setuptools", "types-requests"]

[project.scripts]
it-depends = "it_depends.__main__:main"

[project.urls]
Homepage = "https://github.com/trailofbits/it-depends"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
line_length = 100
multi_line_output = 3
known_first_party = "it_depends"
include_trailing_comma = true

[tool.black]
line-length = 100
