[project]
name = "it-depends"
dynamic = ["version"]
description = "A software dependency analyzer"
readme = "README.md"
license-files = ["LICENSE"]
license = "LGPL-3.0-or-later"

authors = [{ name = "Trail of Bits", email = "opensource@trailofbits.com" }]

classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cyclonedx-python-lib>=11",
    "docker>=7.1",
    "graphviz>=0.21",
    "johnnydep>=1.20",
    "networkx>=3.5",
    "parse_cmake>=0.4.1",
    "platformdirs>=4.3.8",
    "pydantic-settings >=2.10",
    "semantic_version>=2.10",
    "sqlalchemy>=2.0",
    "tqdm>=4.67",
]
requires-python = ">=3.12"

[tool.setuptools.dynamic]
version = { attr = "it_depends.__version__" }

[project.optional-dependencies]
doc = ["pdoc"]
test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
lint = [
    # NOTE: ruff is under active development, so we pin conservatively here
    # and let Dependabot periodically perform this update.
    "ruff ~= 0.12.9",
    "mypy >= 1.0",
    "types-html5lib",
    "types-requests",
    "types-toml",
    "interrogate",
]
dev = ["it-depends[doc,test,lint]", "twine", "build"]

[project.scripts]
"it-depends" = "it_depends._cli:main"

[project.urls]
Homepage = "https://pypi.org/project/it-depends"
Documentation = "https://trailofbits.github.io/it-depends/"
Issues = "https://github.com/trailofbits/it-depends/issues"
Source = "https://github.com/trailofbits/it-depends"

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints or logging configuration
omit = ["src/it_depends/_cli.py", "src/it_depends/logger.py", "src/it_depends/config.py"]

[tool.mypy]
mypy_path = "src"
packages = "it_depends"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
include = ["src/**/*.py", "test/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
# D203 and D213 are incompatible with D211 and D212 respectively.
# COM812 and ISC001 can cause conflicts when using ruff as a formatter.
# See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
ignore = ["D203", "D213", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"src/it_depends/_cli.py" = [
    "T201", # allow `print` in cli module
]
"test/**/*.py" = [
    "D",    # no docstrings in tests
    "S101", # asserts are expected in tests
]

[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
exclude = ["env", "test", "src/it_depends/_cli.py", "test/repos"]
ignore-semiprivate = true
fail-under = 90